layout + flex basis

--- a/css/utilities.flex.css
+++ b/css/utilities.flex.css
@@ -3,31 +3,59 @@
     ---
     Utility classes to put specific flex properties onto elements
     Will be mostly used on o-layout__item
-*/
 
-.u-flex-basis-auto {}
 
-.u-1-of-2 {}
+.u-flex-basis-auto {
+    flex-basis: auto !important;
+}
 
-.u-1-of-3 {}
+.u-flex-grow-1 {
+    flex-grow: 1 !important;
+}
 
-.u-2-of-3 {}
+.u-1-of-2 {
+    flex-basis: calc(100% / 2) !important;
+}
 
-.u-1-of-4 {}
+.u-1-of-3 {
+    flex-basis: calc(100% / 3) !important;
+}
 
-.u-3-of-4 {}
+.u-2-of-3 {
+    flex-basis: calc(100% / 3 * 2) !important;
+}
 
-.u-1-of-5 {}
+.u-1-of-4 {
+    flex-basis: calc(100% / 4) !important;
+}
 
-.u-2-of-5 {}
+.u-3-of-4 {
+    flex-basis: calc(100% / 4 * 3) !important;
+}
 
-.u-3-of-5 {}
+.u-1-of-5 {
+    flex-basis: calc(100% / 5) !important;
+}
 
-.u-4-of-5 {}
+.u-2-of-5 {
+    flex-basis: calc(100% / 5 * 2) !important;
+}
 
-.u-1-of-6 {}
+.u-3-of-5 {
+    flex-basis: calc(100% / 5 * 3) !important;
+}
 
-.u-5-of-6 {}
+.u-4-of-5 {
+    flex-basis: calc(100% / 5 * 4) !important;
+}
+
+.u-1-of-6 {
+    flex-basis: calc(100% / 6) !important;
+}
+
+.u-5-of-6 {
+    flex-basis: calc(100% / 6 * 5) !important;
+}
 
 @media (min-width: 576px) {
     .u-1-of-2-bp1 {}
@@ -44,3 +72,4 @@
 @media (min-width: 1200px) {
     .u-1-of-2-bp4 {}
 }
+*/
